--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,10 @@ inputs:
     description: 'Command to execute.'
     default: 'ensure'
     required: false
+  path:
+    description: 'Path to the terraform configuration files. Path is relative to repo root, can also work wih absolute path'
+    default: '.'
+    required: false
   bucket:
     description: 'Name of the s3 bucket'
     default: ''
